--- a/src/App.css
+++ b/src/App.css
@@ -28,4 +28,21 @@ a {
             user-select: none;
 }
 
+.center{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
+.valign{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.halign{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
