--- a/src/components/announce/Announcement.css
+++ b/src/components/announce/Announcement.css
@@ -4,10 +4,17 @@
   margin: 1em 0;
   display: flex;
   flex-direction: column;
-  border: 2px solid grey;
+  border: 2px solid #eee;
   border-radius: 0.5em;
 }
 
+.ann-old{
+  color: #555;
+}
+
+.ann-pinned{
+  background: #ffe;
+}
 
 .ann-head{
   display: flex;
@@ -34,21 +41,28 @@
   width: 10%
 }
 .ann-menu-icon{
-  width: 100%
+  height: 1em;
 }
+
 .ann-date{
   font-style: italic;
 }
 
 .ann-body{
-  display:none;
 }
-.ann-text{
-
+.delete-confirm{
+  position: absolute;
+  top: 4em;
+  right: 5em;
+  padding: 0.5em 1em;
+  background: #fff;
+  color: #000;
+  border-radius: 0.5em;
+  z-index:2
 }
-.post-toggle{
-  display: none;
+.delete-action{
+  color: #f00
 }
-.post-toggle:checked+.ann-body{
+.post-toggle:checked+.ann-body, .delete-confirm-toggle:checked+.delete-confirm{
   display: block;
 }
