fix folders and implement edit toggle - to implement folder updating later

--- a/src/css/genPage.css
+++ b/src/css/genPage.css
@@ -2,6 +2,6 @@
   display: flex;
   position: relative;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: align-left;
   width: 100%;
 }
