update login page to use ant design and add logo

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,7 +1,12 @@
-.logo {
+.logo-box {
   height: 32px;
   margin: 16px;
   background: rgba(255, 255, 255, 0.3);
+}
+
+.logo {
+  width: auto;
+  height: 100%;
 }
 
 .site-layout .site-layout-background {
