--- a/src/components/announcement/PostAnn.css
+++ b/src/components/announcement/PostAnn.css
@@ -1,5 +1,21 @@
 .post-ann{
+  display: block;
+  margin: 2em;
   padding: 2em 3em;
+  background: #fff;
   border-radius: 0.5em; 
-  width: 50%;
+}
+
+.ann-input{
+  padding: 0.25em 2em 0.25em 0.5em !important;
+  border: 2px solid #eee;
+  margin-bottom: 0.5em;
+  width: 100%;
+}
+
+.ann-form-bottom{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
