--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,11 @@ a {
   text-decoration: none;
 }
 
+input{
+  border: 2px solid #eee;
+  padding: 0.25em 2em 0.25em 0.5em !important;
+}
+
 /* UI */
 .noselect {
   -webkit-touch-callout: none;
@@ -30,11 +35,19 @@ label, .clickable{
   cursor: pointer;
 }
 
-.shadow{
+.floating-component, .shadow{
   border-collapse: separate;
   -webkit-box-shadow: -5px 5px 20px 5px rgba(215,215,215,1);
   -moz-box-shadow: -5px 5px 20px 5px rgba(215,215,215,1);
   box-shadow: -5px 5px 20px 5px rgba(215,215,215,1);
+}
+
+.floating-component{
+  display: block;
+  margin: 2em;
+  padding: 2em 3em;
+  background: #fff;
+  border-radius: 0.5em; 
 }
 
 .hide{
