--- a/src/css/genPage.css
+++ b/src/css/genPage.css
@@ -3,6 +3,10 @@
   padding: 1em;
 }
 
+.button-holder > .ant-btn{
+  margin-right: 0.5em;
+}
+
 .folder-topbar{
   display: flex;
   justify-content: space-between;
@@ -14,6 +18,7 @@
   justify-content: flex-end;
   align-items: center;
 }
+
 .folder-holder{
   display: flex;
   position: relative;
