--- a/src/components/folders/AddFolder.css
+++ b/src/components/folders/AddFolder.css
@@ -1,35 +1,59 @@
-.folder-add, .folder-logo-plus{
-  color: gray;
+.folder-add{
+  color: #1890ff;
+  border: 1px solid #1890ff;
+}
+.folder-add:hover{
+  background: #f3f3f3;
 }
 
-input#folderCreateToggle{
-  display: none;
+.fit{
+  width: 100%;
 }
 
 .folder-create-bg{
-  display: none;
   position: fixed;
   z-index: 5;
   width: 100%;
-  height: 100vw;
+  height: 100vh;
   left: 0;
   top: 0;
   background: rgba(128,128,128,0.5);
+  color: black;
+  margin: 0
 }
 
 .folder-create{
   position: fixed;
-  padding: 1em;
-  left: 50%;
-  top: 50%;
+  top: 0;
+  width: 50%;
   background: #fff;
-  transform: translate(-0.5,-0.5);
+}
+
+.folder-create-input{
+  width: 100%;
 }
 
 .folder-create-topbar{
   display: flex;
+  padding: 1em 2em;
   justify-content: space-between;
+  align-items: center;
+  font-weight: bold;
+  border-bottom : 1px solid #f3f3f3;
 }
-input#folderCreateToggle:checked ~ .folder-create-bg{
-  display: block;
+.folder-create-middlebar{
+  padding: 2em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.folder-create-endbar{
+  display: flex;
+  border-top : 1px solid #f3f3f3;
+  padding: 1em 2em;
+  justify-content: flex-end;
+}
+
+.folder-create-endbar > .ant-btn{
+  margin-left: 1em;
 }
