--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,14 +1,14 @@
 .login-form{
-  background: #d9d9d9;
+  background: #f3f3f3;
   border-radius: 0.5em;
-  padding: 2em;
+  padding: 2em 3em;
   text-align: left;
-  width: 30em;
+  width: 32em;
 }
 
 .logo-box {
-  height: 32px;
-  margin: 16px;
+  height: 3em;
+  margin: 1.5em;
   background: rgba(255, 255, 255, 0.3);
   position: absolute;
   left: 0;
@@ -21,8 +21,9 @@
 }
 
 .login-title{
-  font-size: 1.5em;
+  font-size: 2em;
   font-weight: bold;
+  padding: 1em 0;
 }
 
 .pw-field-wrapper{
@@ -34,9 +35,12 @@
 
 .pw-toggle{
   cursor: pointer;
-  right: 0.5em;
+  right: 1em;
 }
-
+.pw-errors{
+  width: 100%;
+  text-align: center;
+}
 input[type=text],input[type=password]{
   /* padding: 0.5em 3em; */
 }
@@ -44,8 +48,9 @@ input[type=text],input[type=password]{
 .pw-input{
   width: 70%;
 }
-.button{
-  position: relative;
+.login-button{
+  margin-top: 2em;
+  margin-bottom: 1em;
 }
 
 .select-user{
