--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@ html,
 body {
   font-family: 'Roboto', sans-serif !important;
   background-color: rgb(245, 245, 245);
+  font-style: normal;
+  font-weight:400;
   font-size: 12px;
 }
 
