--- a/src/css/genPage.css
+++ b/src/css/genPage.css
@@ -17,6 +17,14 @@
   position: relative;
   overflow-x: scroll;
 }
+
+.folder-blank{
+  display:flex;
+  padding: 5em 0;
+  flex-direction: column;
+  align-items: center;
+}
+
 .post-topbar{
   display: flex;
   justify-content: flex-end;
