--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@ body {
   font-size: 12px;
 }
 
+h4{
+  color: #999 !important;
+  font-weight: 400 !important;
+}
 .nav-container {
   margin: auto;
 }
