--- a/src/css/contactPage.css
+++ b/src/css/contactPage.css
@@ -31,9 +31,18 @@
 }
 
 .contactSearchDiv {
-  /* display: inline-block; */
   position: absolute;
   right: 25px;
+  display: flex;
+  align-items: center;
+}
+
+.contact-content-container {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  border-radius: 10px;
+  background-color: white;
 }
 
 .contactFooter {
