--- a/src/css/contactPage.css
+++ b/src/css/contactPage.css
@@ -1,6 +1,13 @@
 .container {
   height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.ant-layout.verticalFillLayout {
+  padding: 0 24px;
+  flex: 1;
 }
 
 .contactHeader {
@@ -47,24 +54,20 @@
   height: 100%;
   margin: 0;
   padding: 0;
-  border-radius: 10px 10px 0 0;
+  padding: 10px 0;
+  border-radius: 10px;
   background-color: white;
 }
 
 .contactFooter {
   display: flex;
-  position: absolute;
+  position: fixed;
   width: 100%;
   bottom: 0;
   right: 0;
   padding: 30px;
   background-color: white;
   justify-content: flex-end;
-  border-top: 1px solid #F0F2F5;
-  border-left: 1px solid #F0F2F5;
-}
-
-.modalFooterLeftButton {
-  display: absolute;
-  left: 0;
+  border-top: 1px solid #f0f2f5;
+  border-left: 1px solid #f0f2f5;
 }
