--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,9 +1,10 @@
 .login-form{
   background: #f3f3f3;
   border-radius: 0.5em;
-  padding: 2em 3em;
+  padding:4.6em 2.9em 3.2em 3.2em;
   text-align: left;
-  width: 32em;
+  width: 29.5em;
+  height: 24.7em;
 }
 
 .logo-box {
@@ -11,31 +12,38 @@
   margin: 1.5em;
   background: rgba(255, 255, 255, 0.3);
   position: absolute;
-  left: 0;
-  top: 0;
+  left: 1em;
+  top: 0.75em;
 }
 
 .logo {
-  width: auto;
-  height: 100%;
+  width: 35.5%;
+  height: 127.5%;
 }
 
 .login-title{
-  font-size: 2em;
+  font-size: 1.7em;
   font-weight: bold;
-  padding: 1em 0;
+  color: rgba(0, 0, 0, 0.85);
+
 }
 
 .pw-field-wrapper{
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
+  color: rgba(0, 0, 0, 0.85);
+  font-size: 1em;
+  margin-top: 1.4em;
 }
 
 .pw-toggle{
   cursor: pointer;
-  right: 1em;
+  right: 0.7em;
+  text-align: center;
+  margin-top: 0.36em;
+  color: rgba(0, 0, 0, 0.65);
 }
 .pw-errors{
   width: 100%;
@@ -46,17 +54,22 @@ input[type=text],input[type=password]{
 }
 
 .pw-input{
-  width: 70%;
+  width: 15.4em;
+  margin-top: 0.4em;
+  margin-left: 0.7em;
+
 }
 .login-button{
-  margin-top: 2em;
-  margin-bottom: 1em;
+  margin-top: 2.4em;
+  margin-bottom: 0em;
+  justify-content: center;
 }
 
 .select-user{
   cursor: pointer;
-  padding: 0.5em 2em;
+  padding-top: 2.3em;
   width: 100%;
   text-align: center;
+  color: rgba(0, 0, 0, 0.65);
 }
 
