--- a/src/css/genPage.css
+++ b/src/css/genPage.css
@@ -53,3 +53,54 @@
   justify-content: space-between;
   padding: 1em;
 }
+
+.move-dialog > .ant-modal-content > .ant-modal-body{
+  padding: 0;
+}
+.move-modal-top>.anticon{
+  padding-right: 1em;
+}
+
+.navpath-list{
+  width: 100%;
+  padding: 0.75em 1.5em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor:pointer;
+}
+
+.navpath-list-enabled:hover{
+  background: #1890ff;
+  font-weight: bold;
+  color: white;
+}
+.navpath-list-disabled{
+  background: #eee;
+  color: #555;
+  cursor: not-allowed;
+}
+.navpath-list-left{
+  display: flex;
+  align-items: center;
+}
+.navpath-list-empty{
+  width: 100%;
+  text-align: center;
+  padding: 2em;
+}
+.navpath-list-left > .anticon-folder > svg{
+  width: 2.5em !important;
+  height: 2.5em !important;
+  padding-right: 0.75em;
+}
+.navpath-list-enabled > .navpath-list-left > .anticon-folder > svg{
+  color: #92ceff !important;
+}
+.navpath-list-disabled > .navpath-list-right > .anticon-right > svg{
+  display:none;
+}
+.navpath-list-enabled > .navpath-list-right > .anticon-right > svg{
+  color: #fff !important;
+}
+
