--- a/src/components/folders/Folder.css
+++ b/src/components/folders/Folder.css
@@ -1,7 +1,7 @@
 .folder{
-  padding: 0 0.5em;
-  border-radius: 0.5em;
   margin: 0.5em;
+  border-radius: 0.5em;
+  padding: 0.25em 1em;
   width: calc( 30% - 2em);
   display: flex;
   align-items: center;
@@ -31,12 +31,13 @@
 }
 
 .folder-logo-icon{
+  line-height: 1;
   color: #92ceff !important;
 }
 .folder-logo-icon > .anticon-folder > svg{
   width: 2.5em !important;
   height: 2.5em !important;
-  padding: 0 0.5em;
+  padding-right: 0.5em;
 }
 
 .folder-normal:hover, .folder-label:hover{
