--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 html,
 body {
   font-family: 'Roboto', sans-serif !important;
-  background: rgb(245, 245, 245);
+  background: #fff;
   font-style: normal;
   font-weight:400;
   font-size: 12px;
