announcement edit modal working

--- a/src/components/announcement/Announcement.css
+++ b/src/components/announcement/Announcement.css
@@ -76,6 +76,11 @@
   padding: 18px 16px;
 }
 
+.announcement-container.collapsed {
+  max-height: 400px;
+  overflow: hidden;
+}
+
 .announcement-header {
   margin-bottom: 8px;
 }
