--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,9 @@ input{
   padding: 0.25em 2em 0.25em 0.5em !important;
 }
 
+.ant-input-affix-wrapper, .ant-dropdown-trigger{
+  margin-right: 0.5em !important;
+}
 /* UI */
 .noselect {
   -webkit-touch-callout: none;
