--- a/src/components/folders/Folder.css
+++ b/src/components/folders/Folder.css
@@ -12,7 +12,7 @@
 }
 .folder-normal{
   color: black;
-  border: 1px solid gray;
+  border: 1px solid #C4C4C4;
 }
 .folder-normal:hover{
   background: #f3f3f3;
