--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,26 @@ label,
   color: red;
   font-size: 0.85em;
 }
+
+.em2{
+  font-weight: 700;
+  font-size: 1.5em !important;
+}
+.em3{
+  font-weight: 400;
+  font-size: 1em;
+  color: #7E7E7E !important;
+}
+.em4-light{
+  font-weight: 400;
+  font-size: 1em;
+  color: #8C8C8C !important;
+}
+.em4-dark{
+  font-weight: 400;
+  font-size: 1em;
+  color: #595959 !important;
+}
 /* Positioning */
 .center {
   position: absolute !important;
