--- a/src/css/genPage.css
+++ b/src/css/genPage.css
@@ -74,6 +74,15 @@ span.em4-light:last-of-type > a{
   justify-content: flex-end;
   padding-bottom: 1.25em;
 }
+
+.folder-editbar{
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: flex-end;
+  padding-bottom: 0.75em;
+}
+
 /*
 .resources-editbar{
   display:none;
