--- a/src/css/genPage.css
+++ b/src/css/genPage.css
@@ -71,7 +71,9 @@ span.em4-light:last-of-type > a{
   width: 100%;
   align-items: center;
   justify-content: flex-end;
-  padding-bottom: 1.25em;
+  padding-bottom: 0.89em;
+  margin-bottom: 1.71em;
+  border-bottom: 1px solid #f3f3f3;
 }
 
 .folder-editbar{
@@ -79,7 +81,9 @@ span.em4-light:last-of-type > a{
   width: 100%;
   align-items: center;
   justify-content: flex-end;
-  padding-bottom: 0.75em;
+  padding-bottom: 0.89em;
+  margin-bottom: 1.71em;
+  border-bottom: 1px solid #f3f3f3;
 }
 
 /*
