fixed modal inputs shortening to length of error message. input widths stay at 100% now

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -28,6 +28,10 @@
   margin: 16px 0 0 0;
 }
 
+.modal-form .ant-col {
+  width: 100%;
+}
+
 /* ============================================================================================== */
 /* MODAL FOOTER STYLES */
 /* ============================================================================================== */
