--- a/src/css/genPage.css
+++ b/src/css/genPage.css
@@ -39,6 +39,10 @@ span.em4-light:last-of-type > a{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid #f3f3f3;
+  padding: 0 1.71em;
+  padding-bottom: 0.89em;
+  margin-bottom: 1.71em;
 }
 
 .folder-post{
@@ -64,6 +68,7 @@ span.em4-light:last-of-type > a{
   position: relative;
   flex-wrap: wrap;
   width: 100%;
+  padding: 0 1.71em;
 }
 
 .post-editbar{
@@ -71,9 +76,10 @@ span.em4-light:last-of-type > a{
   width: 100%;
   align-items: center;
   justify-content: flex-end;
+  border-bottom: 1px solid #f3f3f3;
+  padding: 0 1.71em;
   padding-bottom: 0.89em;
   margin-bottom: 1.71em;
-  border-bottom: 1px solid #f3f3f3;
 }
 
 .folder-editbar{
@@ -81,9 +87,10 @@ span.em4-light:last-of-type > a{
   width: 100%;
   align-items: center;
   justify-content: flex-end;
-  padding-bottom: 0.89em;
-  margin-bottom: 1.71em;
-  border-bottom: 1px solid #f3f3f3;
+}
+
+.folder-post{
+  padding: 0 1.71em;
 }
 
 /*
