--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
-/* html,
+html,
 body {
   font-family: "Roboto", sans-serif !important;
   background: #fff;
   font-style: normal;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
 }
-
+/* 
 h4 {
   color: #999 !important;
   font-weight: 400 !important;
@@ -57,7 +57,7 @@ label,
 .floating-component {
   display: block;
   margin: 2em;
-  padding: 2em 1.71em;
+  padding: 1.71em 0;
   background: #fff;
   border-radius: 0.5em;
 }
@@ -73,6 +73,11 @@ label,
   display: block;
   color: red;
   font-size: 0.85em;
+}
+
+.padding-normal{
+  padding-left: 1.71em;
+  padding-right: 1.71em;
 }
 
 .em2{
