--- a/src/css/genPage.css
+++ b/src/css/genPage.css
@@ -1,12 +1,13 @@
 hr.folder-hr{
   border: 1px solid #ABABAB;
-  margin: 1em 0;
+  margin: 1em;
 }
 
 .resources-topbar{
   background: #fff;
-  padding: 1em;
+  padding: 1em 1.71em;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-end;
 }
@@ -16,9 +17,18 @@ span.em4-light:last-of-type > a{
 
 .resources-topbar-right{
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  margin-top: 1em;
 }
+
+@media only screen and (orientation: landscape) {
+  .resources-search {
+    width: 18em !important;
+  }
+}
+
 
 .button-holder{
   width: 100%;
