--- a/src/css/page.css
+++ b/src/css/page.css
@@ -52,6 +52,9 @@
 
 .content-card {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   margin: 24px 0 0 0;
   border-radius: 10px;
   background-color: white;
