--- a/src/components/announcement/announcement.css
+++ b/src/components/announcement/announcement.css
@@ -27,7 +27,7 @@
 }
 
 /* Handling Item Collapse */
-.announcement-item{
+.announcement-item {
   background: #fff;
 }
 .announcement-content-holder {
@@ -44,19 +44,19 @@
   color: #00f;
   justify-content: center;
   align-items: center;
-  top: calc( 300px - 3em);
+  top: calc(300px - 3em);
   height: 3em;
   width: 100%;
-  background-image: linear-gradient(rgba(255,255,255,0), #fff);
+  background-image: linear-gradient(rgba(255, 255, 255, 0), #fff);
 }
-.announcement-toggle{
+.announcement-toggle {
   display: none;
 }
-.announcement-toggle:checked ~ .announcement-ckeditor-content{
+.announcement-toggle:checked ~ .announcement-ckeditor-content {
   max-height: 9999px;
   overflow: scroll;
 }
-.announcement-toggle:checked ~ .announcement-show-more{
+.announcement-toggle:checked ~ .announcement-show-more {
   display: none;
 }
 /* ======================= */
