--- a/src/components/announcement/announcement.css
+++ b/src/components/announcement/announcement.css
@@ -26,40 +26,6 @@
   padding: 18px 4px;
 }
 
-/* Handling Item Collapse */
-.announcement-item {
-  background: #fff;
-}
-.announcement-content-holder {
-  position: relative;
-}
-.announcement-ckeditor-content {
-  max-height: 300px;
-  overflow: hidden;
-}
-.announcement-show-more {
-  position: absolute;
-  display: flex;
-  font-weight: 500;
-  color: #00f;
-  justify-content: center;
-  align-items: center;
-  top: calc(300px - 3em);
-  height: 3em;
-  width: 100%;
-  background-image: linear-gradient(rgba(255, 255, 255, 0), #fff);
-}
-.announcement-toggle {
-  display: none;
-}
-.announcement-toggle:checked ~ .announcement-ckeditor-content {
-  max-height: 9999px;
-  overflow: scroll;
-}
-.announcement-toggle:checked ~ .announcement-show-more {
-  display: none;
-}
-/* ======================= */
 .announcement-header {
   padding: 0;
   margin-bottom: 8px;
@@ -91,4 +57,69 @@
   color: gray;
   display: inline-block;
   margin-right: 1em;
+}
+
+.announcement-item {
+  /* background: #fff; */
+}
+
+.announcement-content-holder {
+  position: relative;
+}
+
+.announcement-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ckeditor-content {
+  width: 100%;
+}
+
+/* Handling Item Collapse */
+.ckeditor-content.overflowed {
+  max-height: 400px;
+  overflow: hidden;
+}
+
+.announcement-expand-toggle-checkbox {
+  display: none;
+}
+
+.announcement-expand-toggle,
+.announcement-collapse-toggle {
+  display: none;
+  width: 100%;
+  text-align: center;
+}
+
+.announcement-expand-toggle {
+  position: absolute;
+  bottom: 0;
+  padding: 100px 0 10px 0;
+  background-image: linear-gradient(rgba(255, 255, 255, 0), white);
+}
+
+.announcement-collapse-toggle {
+  display: none;
+  position: relative;
+  padding-top: 10px;
+}
+
+.ckeditor-content.overflowed ~ .announcement-expand-toggle {
+  display: block;
+}
+
+.announcement-expand-toggle-checkbox:checked ~ .announcement-expand-toggle {
+  display: none;
+}
+
+.announcement-expand-toggle-checkbox:checked ~ .announcement-collapse-toggle {
+  display: block;
+}
+
+.announcement-expand-toggle-checkbox:checked ~ .ckeditor-content.overflowed {
+  max-height: 1600px;
+  overflow: scroll;
 }
