--- a/src/components/announcement/announcement.css
+++ b/src/components/announcement/announcement.css
@@ -1,12 +1,12 @@
 /* ============================================================================================== */
 /* ANNOUNCEMENT LIST STYLES */
 /* ============================================================================================== */
-.ant-list.announcement-list {
-  padding: 0 16px;
+.announcement-list .ant-list-header {
+  padding: 0;
 }
 
 .announcement-list .content-card-header {
-  padding: 0 4px;
+  margin: 20px 24px;
 }
 
 .announcement-list .ant-pagination {
@@ -23,7 +23,8 @@
 /* ============================================================================================== */
 .ant-list-lg .ant-list-item.announcement-item {
   position: relative;
-  padding: 18px 4px;
+  padding: 20px 0;
+  margin: 0 24px;
 }
 
 .announcement-header {
@@ -35,14 +36,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: -10px;
+  height: 22px;
 }
 
 .announcement-header h1,
 .announcement-header h3 {
   display: inline-block;
   margin-bottom: 0;
-  /* line-height: 0.5em; */
+  line-height: 22px;
 }
 
 .announcement-header h1 {
@@ -53,32 +54,33 @@
 
 .announcement-header h3 {
   font-size: 12px;
-  font-weight: 400;
-  color: gray;
+  font-weight: 300;
+  color: #595959;
   display: inline-block;
   margin-right: 1em;
 }
 
-.announcement-item {
-  /* background: #fff; */
+.announcement-header .anticon {
+  color: #8c8c8c;
 }
 
-.announcement-content-holder {
+.announcement-content-container-holder {
   position: relative;
 }
 
-.announcement-content {
+.announcement-content-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.ckeditor-content {
+.announcement-content {
   width: 100%;
+  color: #595959;
 }
 
 /* Handling Item Collapse */
-.ckeditor-content.overflowed {
+.announcement-content.overflowed {
   max-height: 400px;
   overflow: hidden;
 }
@@ -94,6 +96,11 @@
   text-align: center;
 }
 
+.announcement-expand-toggle label,
+.announcement-collapse-toggle label {
+  color: grey;
+}
+
 .announcement-expand-toggle {
   position: absolute;
   bottom: 0;
@@ -107,7 +114,7 @@
   padding-top: 10px;
 }
 
-.ckeditor-content.overflowed ~ .announcement-expand-toggle {
+.announcement-content.overflowed ~ .announcement-expand-toggle {
   display: block;
 }
 
@@ -119,7 +126,8 @@
   display: block;
 }
 
-.announcement-expand-toggle-checkbox:checked ~ .ckeditor-content.overflowed {
+.announcement-expand-toggle-checkbox:checked
+  ~ .announcement-content.overflowed {
   max-height: 1600px;
   overflow: scroll;
 }
