--- a/src/css/page.css
+++ b/src/css/page.css
@@ -61,15 +61,50 @@
   overflow: hidden;
 }
 
+.content-card.padded-top-24 {
+  padding-top: 24px;
+}
+
 .content-card.img-banner {
   height: 200px;
 }
 
-.content-card.img-banner img {
-  width: 100%;
+.img-banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.content-card.pad-1 {
+.img-banner h1 {
+  position: absolute;
+  bottom: 0px;
+  left: 24px;
+  color: white;
+  font-weight: 500;
+  font-size: 36px;
+  margin-bottom: 0;
+  /* text-shadow: 0 0 5px black; */
+}
+
+.img-banner button {
+  position: absolute;
+  top: 10px;
+  right: 24px;
+  color: grey;
+  font-size: 14px;
+}
+
+.img-banner-mask {
+  position: absolute;
+  background-color: rgba(105, 105, 105, 0.5);
+  width: 100%;
+  height: 100%;
+}
+
+.content-card.img-banner img {
+  width: 100%;
+  /* position: absolute;
+  bottom: -50%; */
 }
 
 /* ============================================================================================== */
@@ -81,13 +116,13 @@
   justify-content: space-between;
 }
 
-.content-card-header.padded {
-  padding: 16px 20px 12px 20px;
+.content-card-header.margin-24 {
+  margin: 0 24px;
 }
 
 .content-card-header h1 {
-  font-size: 20px;
-  font-weight: 400;
+  font-size: 16px;
+  font-weight: 600;
   margin: 0;
 }
 
