--- a/src/components/contacts/contacts.css
+++ b/src/components/contacts/contacts.css
@@ -2,7 +2,7 @@
 /* GENERAL CONTACT STYLES*/
 /* ============================================================================================== */
 li:last-child {
-  margin-bottom: 15px;
+  margin-bottom: 44px;
 }
 
 /* ============================================================================================== */
@@ -10,17 +10,16 @@ li:last-child {
 /* ============================================================================================== */
 .contact-item {
   width: 100%;
-  padding: 11px 20px;
+}
+
+.contact-item-content {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  box-shadow: inset 0 0 2px #bfbfbf;
-}
-
-.contact-item:last-child {
-  /* border-bottom: solid 1px #bfbfbf; */
-  /* box-shadow: 0 2px 2px -1px #bfbfbf; */
+  border-bottom: 2px solid #f0f0f0;
+  margin: 0 24px;
+  padding: 11px 0;
 }
 
 .contact-item:nth-child(even) {
@@ -37,6 +36,8 @@ li:last-child {
 .contact-item a {
   margin-bottom: 0;
   display: inline-block;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .contact-item p,
