--- a/src/css/page.css
+++ b/src/css/page.css
@@ -61,10 +61,6 @@
   overflow: hidden;
 }
 
-.content-card.padded-top-24 {
-  padding-top: 24px;
-}
-
 .content-card.img-banner {
   height: 200px;
 }
@@ -72,7 +68,8 @@
 .img-banner {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .img-banner h1 {
@@ -101,23 +98,20 @@
   height: 100%;
 }
 
-.content-card.img-banner img {
+.img-banner img {
+  /* width: 100%; */
+  /* flex-shrink: 1; */
   width: 100%;
-  /* position: absolute;
-  bottom: -50%; */
+  height: 100%;
+  object-fit: cover;
 }
 
 /* ============================================================================================== */
 /* CONTENT LAYOUTS AND STYLES */
 /* ============================================================================================== */
 .content-card-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.content-card-header.margin-24 {
-  margin: 0 24px;
+  padding: 24px 24px 0 24px;
+  border-bottom: 2px solid #f0f0f0;
 }
 
 .content-card-header h1 {
@@ -130,8 +124,21 @@
   font-weight: 500;
 }
 
+.content-card-header .header-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
 .content-card ul {
+  list-style-type: none;
   padding: 0;
-  margin-bottom: 0;
+}
+
+.content-card-list ul,
+ul.content-card-list {
+  margin: 0 24px;
+  padding: 0;
   list-style-type: none;
 }
