--- a/src/css/page.css
+++ b/src/css/page.css
@@ -43,7 +43,8 @@
 
 .page-header-interactive-items .ant-input-affix-wrapper,
 .page-header-interactive-items button {
-  margin-left: 16px;
+  margin-left: 8px;
+  margin-right: 0;
 }
 
 /* ============================================================================================== */
