fixed contactspage list bottom margin style

--- a/src/components/contacts/contacts.css
+++ b/src/components/contacts/contacts.css
@@ -1,8 +1,8 @@
 /* ============================================================================================== */
 /* GENERAL CONTACT STYLES*/
 /* ============================================================================================== */
-li:last-child {
-  margin-bottom: 44px;
+.contact-item:last-child {
+  margin-bottom: 12px;
 }
 
 /* ============================================================================================== */
