--- a/src/components/contacts/contacts.css
+++ b/src/components/contacts/contacts.css
@@ -72,3 +72,49 @@
   padding: 0 17px;
   margin-bottom: 10px;
 }
+
+/* ============================================================================================== */
+/* CONTACT MODAL STYLES */
+/* ============================================================================================== */
+.ant-btn-circle.upload-img-circle-btn,
+.ant-avatar.ant-avatar-lg {
+  width: 209px;
+  height: 209px;
+}
+
+.ant-avatar.ant-avatar-lg {
+  box-shadow: 0 0 8px grey;
+}
+
+.ant-btn-circle.upload-img-circle-btn {
+  font-size: 12px;
+  color: rgba(53, 53, 53, 0.65);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.large-anticon svg {
+  width: 33px;
+  height: 33px;
+}
+
+.upload-centered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+  margin-bottom: 10px;
+}
+
+.upload-centered .ant-btn {
+  margin-top: 10px;
+}
+
+.requiredInput > .ant-form-item-control {
+  width: 100%;
+}
+
+.ant-avatar.blur > img {
+}
