--- a/src/App.css
+++ b/src/App.css
@@ -53,10 +53,14 @@ label,
   -moz-box-shadow: -5px 5px 20px 5px rgba(215, 215, 215, 1);
   box-shadow: -5px 5px 20px 5px rgba(215, 215, 215, 1);
 }
+.floating-component-parent {
+  padding: 2em;
+  padding-bottom: 0;
+}
 
 .floating-component {
   display: block;
-  margin: 2em;
+  margin-bottom: 2em;
   padding: 1.71em 0;
   background: #fff;
   border-radius: 0.5em;
