--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,26 @@ label,
   cursor: pointer;
 }
 
+.spin {
+  animation-name: spin;
+  animation-duration: 3000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
+}
+
+.spin-large{
+  width: 5em !important;
+  height: auto !important;
+}
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
 .shadow {
   border-collapse: separate;
   -webkit-box-shadow: -5px 5px 20px 5px rgba(215, 215, 215, 1);
@@ -57,6 +77,8 @@ label,
 .floating-component-parent {
   padding: 2em;
   padding-bottom: 0;
+  position: relative;
+  flex-grow: 1;
 }
 
 .floating-component {
