--- a/src/components/contacts/contacts.css
+++ b/src/components/contacts/contacts.css
@@ -76,17 +76,17 @@
 /* ============================================================================================== */
 /* CONTACT MODAL STYLES */
 /* ============================================================================================== */
-.ant-btn-circle.upload-img-circle-btn,
-.ant-avatar.ant-avatar-lg {
+.modal-form .ant-btn-circle.upload-img-circle-btn,
+.modal-form .ant-avatar.ant-avatar-lg {
   width: 209px;
   height: 209px;
 }
 
-.ant-avatar.ant-avatar-lg {
+.modal-form .ant-avatar.ant-avatar-lg {
   box-shadow: 0 0 8px grey;
 }
 
-.ant-btn-circle.upload-img-circle-btn {
+.modal-form .ant-btn-circle.upload-img-circle-btn {
   font-size: 12px;
   color: rgba(53, 53, 53, 0.65);
   display: flex;
@@ -95,12 +95,12 @@
   align-items: center;
 }
 
-.large-anticon svg {
+.modal-form .large-anticon svg {
   width: 33px;
   height: 33px;
 }
 
-.upload-centered {
+.modal-form .upload-centered {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -108,13 +108,13 @@
   margin-bottom: 10px;
 }
 
-.upload-centered .ant-btn {
+.modal-form .upload-centered .ant-btn {
   margin-top: 10px;
 }
 
-.requiredInput > .ant-form-item-control {
+.modal-form .requiredInput > .ant-form-item-control {
   width: 100%;
 }
 
-.ant-avatar.blur > img {
+.modal-form .ant-avatar.blur > img {
 }
