--- a/src/css/page.css
+++ b/src/css/page.css
@@ -62,6 +62,15 @@
   overflow: hidden;
 }
 
+.content-card .padded-content {
+  padding: 24px;
+}
+
+.padded-content .horizontal {
+  display: flex;
+  flex-direction: row;
+}
+
 .content-card.img-banner {
   flex: 0 0 auto;
   height: 200px;
