--- a/src/css/page.css
+++ b/src/css/page.css
@@ -66,7 +66,7 @@
   padding: 24px;
 }
 
-.padded-content.horizontal {
+.padded-content .row {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
